コード整理

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -16,3 +16,16 @@
   margin-bottom: 2px;
   color: black;
 }
+
+.title {
+  padding-bottom: 5%;
+  justify-content: center;
+  &-child {
+    float: left;
+    // background-color: #68ccf9;
+    background-color: rgb(195, 194, 194);
+    font-weight: bold;
+    overflow: hidden;
+    font-size: 15px;
+  }
+}
