コード整理

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -31,7 +31,7 @@
   background-color: #68ccf9;
 }
 
-.user_name {
+.post-user-name {
   position: absolute;
   margin: 40px 20px 20px;
 }
@@ -108,7 +108,7 @@ input {
     display: grid;
     text-align: center;
   }
-  .user_name {
+  .user-name {
     margin-top: 0;
   }
   .image {
