コード整理

--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -45,13 +45,6 @@
   }
 }
 
-.school_ays-name {
-  color: black;
-  font-size: 25px;
-  text-align: center;
-  font-weight: bold;
-}
-
 .attack_i,.defensive_i,.pitcher_i,.comprehensive_i,.expectations_i {
   font-size: 20px;
   margin-right: 10%;
@@ -129,7 +122,7 @@
 }
 
 // /*詳細
-.school_name-ays {
+.school-name-ays {
   font-size: 35px;
   text-align: center;
   margin-top: 100px;
