--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -35,3 +35,10 @@
   padding-top: 13px;
   font-size: 18px;
 }
+
+.school-ays-name {
+  color: black;
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+}
