--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -57,9 +57,9 @@
   margin-left: 29%;
 }
 
-.content-fcs_show {
-  background-color: #EEFFFF;
-}
+// .content-fcs-show {
+//   background-color: #EEFFFF;
+// }
 
 .win-school,.lose-school {
   font-size: 27px;
