--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -23,7 +23,7 @@
   background: #eb4b46;
 }
 
-.sub_title {
+.caption {
   margin-top: 40px;
   text-align: center;
   font-size: 30px;
@@ -67,7 +67,7 @@ input {
   &-content {
     background-color: rgba(236, 236, 206,0.4);
     // min-height: 780px;
-    &_common {
+    &-common {
       background-color: rgba(236, 236, 206,0.4);
       min-height: 780px;
     }
