--- a/app/views/layouts/vue.html.erb
+++ b/app/views/layouts/vue.html.erb
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-  <%= render partial: "tweets/header" %>
+  <!--<%= render partial: "tweets/header" %>-->
     <%= yield %>
   </body>
 </html>
