--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   </head>
     <script src="https://cdn.jsdelivr.net/npm/vue-js-modal@1.3.31/dist/index.min.js"></script>
   <body>
-  <%= render partial: "tweets/header" %>
+  <!--<%= render partial: "tweets/header" %>-->
     <%= yield %>
   </body>
 </html>
