--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -36,6 +36,22 @@
   margin: 40px 20px 20px;
 }
 
+.data-title {
+  color: #00CCCC;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-top: 150px;
+  border-bottom: 2px solid #77c3df;;
+}
+
+.map-title {
+  color: #f3b82d;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-top: 150px;
+  border-bottom: 2px solid #f8df53;;
+}
+
 .show-text {
   margin: 0 0 0 50px;
   font-size: 20px;
