--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -52,12 +52,10 @@
 .article {
   width: 400px;
   text-align: center;
-  // background-color: #68ccf9;
   background-color: #f3f3f3;
   border: solid 1px rgb(255, 255, 255);
-  // height: auto;
   &-title {
-    font-size: 20px;
+    font-size: 1.0rem;
     color: black;
     font-weight: bold;
   }
