--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -1,7 +1,7 @@
 .school-fcs{
   display: flex;
   justify-content: space-evenly;
-  font-size: 20px;
+  font-size: 1.0rem;
   color: black;
   font-weight: bold;
 }
@@ -13,7 +13,7 @@
 
 .forecast {
   width: 400px;
-  height: 140px;
+  // height: 140px;
   background-color: #f3f3f3;
   border: solid 1px rgb(255, 255, 255);
   text-align: center;
