--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -85,7 +85,7 @@ input {
     // min-height: 780px;
     &-common {
       background-color: rgba(236, 236, 206,0.4);
-      // min-height: 780px;
+      min-height: 280px;
     }
   }
   &-user {
