--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -32,7 +32,7 @@
   // background-size: cover;
   // background-blend-mode:lighten;
   // background-color:rgba(255,255,255,0.5);
-  min-height: 1100px;
+  // min-height: 1100px;
   flex: 1 1 100%;
 }
 
