--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -50,7 +50,7 @@
 }
 
 .article {
-  width: 400px;
+  // width: 400px;
   text-align: center;
   background-color: #f3f3f3;
   border: solid 1px rgb(255, 255, 255);
