--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -11,21 +11,21 @@
   padding-bottom: 20px;
 }
 
-.forecast {
-  width: 400px;
-  // height: 140px;
-  background-color: #f3f3f3;
-  border: solid 1px rgb(255, 255, 255);
-  text-align: center;
-  // background: -moz-linear-gradient(#ffb03c, #ff708d);
-  // background: -webkit-linear-gradient(#ffb03c, #ff708d);
-  // background: linear-gradient(to right, #ffb03c, #ff708d);
-  // background-color: rgb(250, 142, 42);
-  // position: relative;
-  &:hover {
-    opacity: 0.7;
-  }
-}
+// .forecast {
+//   // width: 400px;
+//   // height: 140px;
+//   background-color: #f3f3f3;
+//   border: solid 1px rgb(255, 255, 255);
+//   text-align: center;
+//   // background: -moz-linear-gradient(#ffb03c, #ff708d);
+//   // background: -webkit-linear-gradient(#ffb03c, #ff708d);
+//   // background: linear-gradient(to right, #ffb03c, #ff708d);
+//   // background-color: rgb(250, 142, 42);
+//   // position: relative;
+//   &:hover {
+//     opacity: 0.7;
+//   }
+// }
 
 .forecast-main {
   // background-image: image-url("sky_00148.jpg");
