デザイン修正

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -45,6 +45,13 @@
   }
 }
 
+.user-article {
+  width: 400px;
+  text-align: center;
+  background-color: #f3f3f3;
+  border: solid 1px rgb(255, 255, 255);
+}
+
 .follow_form {
   text-align: center;
 }
