--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -19,10 +19,15 @@
   }
   &-title {
     margin-top: 90px;
-    color: white;
+    // color: white;
     text-align: center;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 50px;
+    color: #000;
+    text-shadow:1px 1px 0 rgb(255, 255, 255), -1px -1px 0 #FFF,
+                -1px 1px 0 #FFF, 1px -1px 0 #FFF,
+                0px 1px 0 #FFF,  0-1px 0 #FFF,
+                -1px 0 0 #FFF, 1px 0 0 #FFF;
   }
 }
 
