--- a/app/assets/stylesheets/tournament.scss
+++ b/app/assets/stylesheets/tournament.scss
@@ -28,7 +28,7 @@
   padding-bottom: 10px;
   display: flex;
   &-content {
-    min-height: 100%;
+    // min-height: 100%;
     background-color: #EEFFFF;
   }
 }
