フロント修正

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -79,7 +79,7 @@
 
 .top-header {
   font-size: 15px;
-  height: 70px;
+  min-height: 70px;
   width: 100%;
   position: relative;
   background-color: #003366;
