--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -24,7 +24,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 60px;
-    color: #000;
+    color: #136FFF;
     text-shadow:1px 1px 0 rgb(255, 255, 255), -1px -1px 0 #FFF,
                 -1px 1px 0 #FFF, 1px -1px 0 #FFF,
                 0px 1px 0 #FFF,  0-1px 0 #FFF,
