--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -46,3 +46,27 @@
 .list {
   min-height: 530px;
 }
+
+.img1 {
+  position: absolute;
+  top: 4%;
+  left: 5%;
+}
+
+.img2 {
+  position: absolute;
+  top: 72%;
+  left: 4%;
+}
+
+.img3 {
+  position: absolute;
+  top: 4%;
+  left: 80%;
+}
+
+.img4 {
+  position: absolute;
+  top: 60%;
+  left: 80%;
+}
