--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -67,6 +67,12 @@
 
 .img4 {
   position: absolute;
-  top: 60%;
+  top: 72%;
   left: 80%;
+}
+
+.img5 {
+  position: absolute;
+  top: 40%;
+  left: 83%;
 }
