--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12,6 +12,7 @@
 }
 
 .name {
+  // background-color: #ff9800;
   font-size: 10px;
   margin-top: 20px;
   margin-bottom: 2px;
@@ -34,7 +35,7 @@
 .sub-title {
   color: black;
   padding-top: 13px;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 .school-ays-name {
