--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -33,7 +33,7 @@
 }
 
 .main-content {
-  // background-color: rgba(236, 236, 206,0.4);
+  background-color: rgba(236, 236, 206,0.4);
   position: relative;
   // height: 100%;
   &-btn{
@@ -55,8 +55,8 @@
   background-color: #f3f3f3;
   border: solid 1px rgb(255, 255, 255);
   &-title {
-    margin-top: 45px;
-    font-size: 1.1rem;
+    margin-top: 50px;
+    font-size: 1.2rem;
     color: black;
     font-weight: bold;
   }
@@ -81,8 +81,8 @@
     flex: 1 1 100%;
   }
   &-icon {
-    width: 140px;
-    height: 140px;
+    width: 160px;
+    height: 160px;
     border: 1.8px solid  rgb(192, 189, 189);
   }
   &-round {
