--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -134,6 +134,18 @@
   font-size: 1.2rem;
 }
 
+.school-ays-name {
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.sub-title-ays {
+  color: black;
+  padding-top: 13px;
+  font-size: 1.0rem;
+}
+
 .reader {
   margin-top: 3%;
   margin-left: 20%;
