--- a/app/assets/stylesheets/forecast.scss
+++ b/app/assets/stylesheets/forecast.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   font-size: 1.0rem;
+  margin-top: 50px;
   color: black;
   font-weight: bold;
 }
@@ -11,28 +12,13 @@
   padding-bottom: 20px;
 }
 
-// .forecast {
-//   // width: 400px;
-//   // height: 140px;
-//   background-color: #f3f3f3;
-//   border: solid 1px rgb(255, 255, 255);
-//   text-align: center;
-//   // background: -moz-linear-gradient(#ffb03c, #ff708d);
-//   // background: -webkit-linear-gradient(#ffb03c, #ff708d);
-//   // background: linear-gradient(to right, #ffb03c, #ff708d);
-//   // background-color: rgb(250, 142, 42);
-//   // position: relative;
-//   &:hover {
-//     opacity: 0.7;
-//   }
-// }
+.forecast-icon {
+  width: 172px;
+  height: 172px;
+  border: 1.8px solid  rgb(192, 189, 189);
+}
 
 .forecast-main {
-  // background-image: image-url("sky_00148.jpg");
-  // background-size: cover;
-  // background-blend-mode:lighten;
-  // background-color:rgba(255,255,255,0.5);
-  // min-height: 1100px;
   flex: 1 1 100%;
 }
 
