--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -86,6 +86,7 @@
     border: 1.8px solid  rgb(192, 189, 189);
   }
   &-round {
+    margin-top: 5px;
     position: absolute;
     right: 20%;
   }
