--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -12,11 +12,14 @@
 }
 
 .name {
-  // background-color: #ff9800;
   font-size: 10px;
   margin-top: 20px;
   margin-bottom: 2px;
   color: black;
+}
+
+.post-time {
+  font-size: 10px;
 }
 
 .title {
