--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -1,32 +1,11 @@
 .analysis-main,.search-ays {
   width: 100%;
-  // height: 100%;
-  // min-height: 900px;
-  // background-image: image-url("photo0000-0331.jpg");
-  // background-size: cover;
-  // background-color:#ffffff80;
-  // background-blend-mode:lighten;
   flex: 1 1 100%;
 }
 
 .analysis_header {
   background-image: url("https://pics.prcm.jp/d1c2e60537af9/78615919/jpeg/78615919.jpeg");
 }
-
-// .analysis {
-//   width: 400px;
-//   height: 140px;
-//   background-color: #f3f3f3;
-//   border: solid 1px rgb(255, 255, 255);
-//   &-image {
-//     position: absolute;
-//     width: 10%;
-//   }
-  
-//   &:hover {
-//     opacity: 0.5;
-//   }
-// }
 
 .data-info {
   background-color: #EEFFFF;
@@ -49,11 +28,6 @@
   font-size: 20px;
   margin-right: 10%;
 }
-
-// .title_ays {
-//   font-size: 18px;
-//   margin-top: 5px;
-// }
 
 #canvas_wrapper{
 	width:460px;
@@ -173,5 +147,16 @@
   }
   .comment-form {
     min-width: 250px;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .school-ays-name {
+    width: 80px;
+    font-size: 1.0rem;
+  }
+
+  .sub-title-ays {
+    font-size: 0.6rem;
   }
 }
