--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -176,12 +176,12 @@
       width: 168px;
       height: 168px;
     }
-    &-title {
-      margin-top: 10px;
-      font-size: 0.8rem;
-      color: black;
-      font-weight: bold;
-    }
+    // &-title {
+    //   margin-top: 10px;
+    //   font-size: 0.8rem;
+    //   color: black;
+    //   font-weight: bold;
+    // }
   }
 }
 
@@ -191,5 +191,17 @@
     text-align: center;
     background-color: #f3f3f3;
     border: solid 1px rgb(255, 255, 255);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .post-content-tws {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  .post-content-tws {
+    display: flex;
   }
 }
