--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,3 +1,11 @@
+.main-content {
+  background-color: rgba(236, 236, 206,0.4);
+  position: relative;
+  &-btn{
+    display: flex;
+  }
+}
+
 .text-format {
   font-size: 25px;
   text-align: center;
