アイコン修正

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -90,3 +90,12 @@
 .no-posts {
   margin-top: 70%;
 }
+
+.user-list-icon {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border: solid;
+  border-color: #acafc3;
+}
