--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,6 +1,6 @@
 .top {
   background-image: image-url("top.jpg");
-  background-size: 100%;
+  background-size: cover;
   height: 100%;
   width: 100%;
   &-menu {
