--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -96,3 +96,15 @@
   height: 140px;
   border: 1.8px solid  rgb(192, 189, 189);
 }
+
+@media screen and (max-width: 370px) {
+  .post-content-map {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 370px) {
+  .post-content-map {
+    display: flex;
+  }
+}
