--- a/app/assets/stylesheets/champion.scss
+++ b/app/assets/stylesheets/champion.scss
@@ -4,6 +4,7 @@
 }
 
 .champion-content {
+  height: 100%;
   background-color: #eef1ba;
   text-align: center;
 }
@@ -39,35 +40,35 @@
   }
 }
 
-@media screen and (max-height: 700px) {
-  .description {
-    margin-top: 1%;
-  }
-}
+// @media screen and (max-height: 700px) {
+//   .description {
+//     margin-top: 1%;
+//   }
+// }
 
-@media screen and (min-height: 700px)  and (max-width: 550px) {
-  .description {
-    margin-top: 35%;
-  }
-  .title-child {
-    margin-bottom: 10%;
-  }
-}
+// @media screen and (min-height: 700px)  and (max-width: 550px) {
+//   .description {
+//     margin-top: 35%;
+//   }
+//   .title-child {
+//     margin-bottom: 10%;
+//   }
+// }
 
-@media screen and (min-height: 1000px)  and (max-width: 800px) {
-  .description {
-    margin-top: 40%;
-  }
-  .title-child {
-    margin-bottom: 20%;
-  }
-}
+// @media screen and (min-height: 1000px)  and (max-width: 800px) {
+//   .description {
+//     margin-top: 40%;
+//   }
+//   .title-child {
+//     margin-bottom: 20%;
+//   }
+// }
 
-@media screen and (min-height: 1000px)  and (max-width: 1100px) {
-  .description {
-    margin-top: 50%;
-  }
-  .title-child {
-    margin-bottom: 30%;
-  }
-}
+// @media screen and (min-height: 1000px)  and (max-width: 1100px) {
+//   .description {
+//     margin-top: 50%;
+//   }
+//   .title-child {
+//     margin-bottom: 30%;
+//   }
+// }
