--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -44,16 +44,9 @@ a{
   color: black;
 }
 
-// .game_record,.game_title{
-//   margin-top: 20px;
-//   width: 100%;
-//   height: 25px;
-// }
-
-// textarea{
-//   margin-top: 20px;
-//   width: 100%;
-// }
+.select-tab-school,.select-tab-school-edit,.select-tab-score {
+  display: flex;
+}
 
 
 input{
@@ -93,4 +86,21 @@ ul {
 
 .active {
   display: block;
+}
+
+@media screen and (max-width: 820px) {
+  .select-tab-school {
+    display: block;
+    margin-right: 120px;
+  }
+  .select-tab-score,.select-tab-school-edit {
+    display: block;
+  }
+  .active,.school-a_score,.school-b_score,.round,.select-school-edit {
+    min-width: 130px;
+    padding-left: 1px;
+  }
+  .border {
+    width: 120px;
+  }
 }
