--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -84,23 +84,6 @@ ul {
   display: none;
 }
 
-.active {
+.active,.active-ays {
   display: block;
-}
-
-@media screen and (max-width: 820px) {
-  .select-tab-school {
-    display: block;
-    margin-right: 120px;
-  }
-  .select-tab-score,.select-tab-school-edit {
-    display: block;
-  }
-  .active,.school-a_score,.school-b_score,.round,.select-school-edit {
-    min-width: 130px;
-    padding-left: 1px;
-  }
-  .border {
-    width: 120px;
-  }
 }
