--- a/app/assets/stylesheets/tweet.scss
+++ b/app/assets/stylesheets/tweet.scss
@@ -167,12 +167,6 @@
       width: 168px;
       height: 168px;
     }
-    // &-title {
-    //   margin-top: 10px;
-    //   font-size: 0.8rem;
-    //   color: black;
-    //   font-weight: bold;
-    // }
   }
 }
 
@@ -201,14 +195,16 @@
 @media screen and (max-width: 820px) {
   .select-tab-school {
     display: block;
-    margin-right: 120px;
+    margin-right: 140px;
   }
   .select-tab-score,.select-tab-school-edit {
     display: block;
   }
-  .active,.school-a_score,.school-b_score,.round,.select-school-edit {
+  .active,.school-a_score,.school-b_score,.select-school-edit {
     min-width: 130px;
-    padding-left: 1px;
+  }
+  .round {
+    min-width: 110px;
   }
 }
 
