--- a/app/assets/stylesheets/analyses.scss
+++ b/app/assets/stylesheets/analyses.scss
@@ -125,6 +125,10 @@
   margin-left: 20%;
 }
 
+.average-content {
+  height: 100%;
+}
+
 @media screen and (max-width: 966px) {
   .reader {
     width: 800px;
