フロント修正

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -35,8 +35,8 @@
   justify-content: center;
   &-child {
     float: left;
-    // background-color: #68ccf9;
-    background-color: rgb(195, 194, 194);
+    background-color: #68ccf9;
+    // background-color: rgb(195, 194, 194);
     font-weight: bold;
     overflow: hidden;
     font-size: 15px;
